src/components/layout.css
@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,500');

html, body{
      height: 100%;
}

body{
      background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
      font-family: 'Ubuntu', sans-serif;
      display: flex;
      align-items: center;
      justify-content: center;
}

*{
      margin: 0;
      padding: 0;
      box-sizing: border-box;
}

::selection{
      background: #ffffff3f;
}

h1{
      font-size: 80px;
      color: #fff;
}

.content{
      width: 50vw;
      height: 50vh;
      text-align: center;
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      animation: contentFadeIn 340ms ease-out;
}

@keyframes contentFadeIn{
      from{
            opacity: 0;
            transform: translateY(50px);
      }
      to{
            opacity: 1;
            transform: translateY(0);
      }
}

.settings{
      display: flex;
      justify-content: space-evenly;
}

.btn{
      background: #ffffff77;
      color: #222;
      padding: 1rem 2rem;
      text-decoration: none;
      border-radius: 7px;
      border: 0;
      font-size: 19px;
      cursor: pointer;
      transition: background 200ms;
}

.btn:hover{
      background: #ffffff9d;
}

.btn:disabled{
      color: #ffffff77;
      background: #ffffff3a;
}

button{
      width: 180px;
}

.btn:focus{
      outline: 0;
      background: #eee;
}

button::after{
      content: '▼';
      position: absolute;
      right: 8px;
      color: #fff;
}

.select{
      position: relative;
}

.select label{
      position: absolute;
      top: -23px;
      color: #fff;
      font-weight: 500;
}

.dropdown{
      list-style-type: none;
      position: absolute;
      width: 100%;
      animation: dropdown 200ms ease-in-out;
}

.dropdown li{
      margin: 0.3rem 0;
}

@keyframes dropdown {
      0%{
            opacity: 0;
            transform: translateY(-100px);
      }
      50%{
            transform: translateY(0);
      }
      55%{
            transform: translateY(5px);
      }
      100% {
            opacity: 1;
            transform: translateY(0);
      }
}

.game-header{
      display: flex;
      font-size: 1.3rem;
      color: #fff;
      justify-content: space-between;
}

.words{
      padding: 1.5rem;
      border-radius:7px;
      font-size: 2rem;
      background: #ffffff3a;
      color: #333;
      display: flex;
      cursor: text;
      box-shadow: 0 0 8px rgba(51, 51, 51, 0.24);
      transition: box-shadow 200ms;
}

.words:focus{
      outline: 0;
      box-shadow: 0 0 15px rgba(51, 51, 51, 0.24);
}

.words:focus .cursor{
      width: 3px;
      height: 100%;
      background: #333;
      animation: pulse 850ms infinite ease-in;
}

@keyframes pulse{
      0%{opacity: 0;}
      50%{opacity: 1;}
      100%{opacity: 0;}
}

.endGameResults{
      position: absolute;
      width: 50%;
      height: 50%;
      top: 50%;
      transform: translateY(-50%);
      background: #fff;
      border-radius: 20px;
      box-shadow: 0 0 15px rgba(51, 51, 51, 0.24);
      text-align: center;
      color: #333;
      font-size: 1.2rem;
      z-index: 2;
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      animation: fadeIn 250ms ease-in-out;
}

.endGameResults h1{
      color: #333;
}

@keyframes fadeIn{
      0%{
            opacity: 0;
            transform: scale(0.5);
      }
      100%{
            opacity: 1;
            transform: scale(1) translateY(-50%);
      }
}

.score{
      position: relative;
}

.streak{
      position: absolute;
      right:-50%;
      top: 0;
      color: #b12aff;
      animation: streak 1s forwards;
}

@keyframes streak{
      0%{
            opacity: 0;
            transform: scale(0.8) translateY(0);
      }
      40%{
            opacity: 1;
            transform: scale(1.2) translateY(-5px);
      }
      100%{
            opacity: 0;
            transform: scale(1) translateY(0);
      }
}


@media(max-width: 1310px){
      h1{
            font-size: 50px;
      }
      .content{
            width: 75vw;
      }
      .settings{
            flex-direction: column;
            height: 60vh;
      }
      .btn {
            width: 100%;
      }
      .dropdown{
            width: 75vw;
            padding: 1rem;
            z-index: 2;
            background: #eee;
            border-radius: 7px;
      }
      .dropdown li{
            background: #fff;
      }
      .endGameResults{
            width: 75%;
            padding: 2rem;
            word-wrap: break-word;
      }
      .endGameResults h1{
            font-size: 3rem;
      }
      .streak{
            right: 0;
            top: -100%;
      }
}

